--- a/templates/index.html
+++ b/templates/index.html
@@ -161,6 +161,10 @@
 		</div>
 	</div>
 	
+	<div class='load-align'>
+		<div class="loader"></div>
+	</div>
+
 	<div id='vis'>
 		<div id='anims'>
 			<div id='convergence_container' class='pop_out'><div id='convergence_plot'></div></div>
@@ -219,6 +223,16 @@
 	<script src="{{ url_for('static', filename='button_operations.js') }}"></script>
 	<script src="{{ url_for('static', filename='visualize.js') }}"></script>
 	<script src="{{ url_for('static', filename='fetch.js') }}"></script>
+
+	<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="/__/firebase/8.8.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="/__/firebase/8.8.1/firebase-analytics.js"></script>
+
+<!-- Initialize Firebase -->
+<script src="/__/firebase/init.js"></script>
 </body>
 
 	<div id='foot'>
