--- a/static/app.css
+++ b/static/app.css
@@ -11,6 +11,26 @@ body
 {
 }
 
+.load-align
+{
+	display: flex;
+    justify-content: center;
+}
+
+.loader {
+  border: 10px solid #f3f3f3; /* Light grey */
+  border-top: 10px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 button
 {
 	font-family: 'Lato', sans-serif;
